[package]
name       = "dico-runtime"
version    = "1.0.0"
authors    = ["DICO-TEAM"]
edition    = "2018"
build      = "build.rs"
license    = "Apache-2.0"
homepage   = "https://github.com/DICO-TEAM/dico-chain"
repository = "https://github.com/DICO-TEAM/dico-chain"



[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# third-party dependencies
codec             = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive", "max-encoded-len", ] }
static_assertions = { version = "1.1.0" }
hex-literal       = { version = "0.3.1", optional = true }
log               = { version = "0.4.14", default-features = false }



# primitives

## local primitives
dico-primitives = { version = "1.0.0", default-features = false, path = "../../primitives" }
currencies      = { version = "3.0.0", default-features = false, path = "../../pallets/currencies"}
pallet-amm      = { version = "1.0.0", default-features = false, path = '../../pallets/amm'}
pallet-farm     = { version = "1.0.0", default-features = false, path = '../../pallets/farm'}
pallet-lbp      = { version = "1.0.0", default-features = false, path = '../../pallets/lbp'}



# orml
orml-tokens = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", rev = "650ef607d023e4537d3f2932baa5e50bc3a349cb"}
orml-traits = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", rev = "650ef607d023e4537d3f2932baa5e50bc3a349cb"}

## dependencies primitives
sp-authority-discovery = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
sp-consensus-babe      = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
sp-block-builder       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
sp-inherents           = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
sp-offchain            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
sp-core                = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
sp-std                 = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
sp-api                 = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
sp-runtime             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
sp-staking             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
sp-keyring             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false, optional = true }
sp-session             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
sp-transaction-pool    = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
sp-version             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
sp-npos-elections      = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }



# frame dependencies
frame-executive                            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
frame-benchmarking                         = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false, optional = true }
frame-support                              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
frame-system                               = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
frame-system-benchmarking                  = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false, optional = true }
frame-election-provider-support            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
frame-system-rpc-runtime-api               = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
frame-try-runtime                          = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false, optional = true }
pallet-assets                              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-authority-discovery                 = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-authorship                          = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-babe                                = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-balances                            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-bounties                            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-collective                          = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-contracts                           = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-contracts-primitives                = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-contracts-rpc-runtime-api           = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-democracy                           = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-election-provider-multi-phase       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-elections-phragmen                  = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-gilt                                = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-grandpa                             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-im-online                           = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-indices                             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-identity                            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-lottery                             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-membership                          = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-mmr                                 = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-multisig                            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-offences                            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-offences-benchmarking               = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false, optional = true }
pallet-proxy                               = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-randomness-collective-flip          = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-recovery                            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-session                             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false, features = ['historical'] }
pallet-session-benchmarking                = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false, optional = true }
pallet-staking                             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-staking-reward-curve                = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-scheduler                           = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-society                             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-sudo                                = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-timestamp                           = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-tips                                = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-treasury                            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-utility                             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-transaction-payment                 = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-transaction-storage                 = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-uniques                             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-vesting                             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
max-encoded-len                            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false, features = ["derive"] }


[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }

[dev-dependencies]
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }


[features]
default = ["std"]
with-tracing = ["frame-executive/with-tracing"]
std = [
    "sp-authority-discovery/std",
    "pallet-assets/std",
    "pallet-authority-discovery/std",
    "pallet-authorship/std",
    "sp-consensus-babe/std",
    "pallet-babe/std",
    "pallet-balances/std",
    "pallet-bounties/std",
    "sp-block-builder/std",
    "codec/std",
    "pallet-collective/std",
    "pallet-contracts/std",
    "pallet-contracts-primitives/std",
    "pallet-contracts-rpc-runtime-api/std",
    "pallet-democracy/std",
    "pallet-elections-phragmen/std",
    "frame-executive/std",
    "pallet-gilt/std",
    "pallet-grandpa/std",
    "pallet-im-online/std",
    "pallet-indices/std",
    "sp-inherents/std",
    "pallet-lottery/std",
    "pallet-membership/std",
    "pallet-mmr/std",
    "pallet-multisig/std",
    "pallet-identity/std",
    "pallet-scheduler/std",
    "dico-primitives/std",
    "sp-offchain/std",
    "pallet-offences/std",
    "pallet-proxy/std",
    "sp-core/std",
    "pallet-randomness-collective-flip/std",
    "sp-std/std",
    "pallet-session/std",
    "sp-api/std",
    "sp-runtime/std",
    "sp-staking/std",
    "pallet-staking/std",
    "sp-keyring",
    "sp-session/std",
    "pallet-sudo/std",
    "frame-support/std",
    "frame-benchmarking/std",
    "frame-system-rpc-runtime-api/std",
    "frame-system/std",
    "pallet-election-provider-multi-phase/std",
    "pallet-timestamp/std",
    "pallet-tips/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-storage/std",
    "pallet-treasury/std",
    "sp-transaction-pool/std",
    "pallet-utility/std",
    "sp-version/std",
    "pallet-society/std",
    "pallet-recovery/std",
    "pallet-uniques/std",
    "pallet-vesting/std",
    "log/std",
    "frame-try-runtime/std",
    "sp-npos-elections/std",
    "currencies/std",
    "orml-tokens/std",
    "orml-traits/std",
    "pallet-amm/std",
    "pallet-farm/std",
    "pallet-lbp/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-election-provider-multi-phase/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "pallet-assets/runtime-benchmarks",
    "pallet-babe/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-bounties/runtime-benchmarks",
    "pallet-collective/runtime-benchmarks",
    "pallet-contracts/runtime-benchmarks",
    "pallet-democracy/runtime-benchmarks",
    "pallet-elections-phragmen/runtime-benchmarks",
    "pallet-gilt/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-identity/runtime-benchmarks",
    "pallet-im-online/runtime-benchmarks",
    "pallet-indices/runtime-benchmarks",
    "pallet-lottery/runtime-benchmarks",
    "pallet-membership/runtime-benchmarks",
    "pallet-mmr/runtime-benchmarks",
    "pallet-multisig/runtime-benchmarks",
    "pallet-proxy/runtime-benchmarks",
    "pallet-scheduler/runtime-benchmarks",
    "pallet-society/runtime-benchmarks",
    "pallet-staking/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-tips/runtime-benchmarks",
    "pallet-transaction-storage/runtime-benchmarks",
    "pallet-treasury/runtime-benchmarks",
    "pallet-utility/runtime-benchmarks",
    "pallet-uniques/runtime-benchmarks",
    "pallet-vesting/runtime-benchmarks",
    "pallet-offences-benchmarking",
    "pallet-session-benchmarking",
    "frame-system-benchmarking",
    "pallet-amm/frame-benchmarking",
    "pallet-farm/frame-benchmarking",
    'pallet-lbp/runtime-benchmarks',
    "hex-literal",
]
try-runtime = [
    "frame-executive/try-runtime",
    "frame-try-runtime",
    "frame-system/try-runtime",
    "pallet-assets/try-runtime",
    "pallet-authority-discovery/try-runtime",
    "pallet-authorship/try-runtime",
    "pallet-babe/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-bounties/try-runtime",
    "pallet-collective/try-runtime",
    "pallet-contracts/try-runtime",
    "pallet-democracy/try-runtime",
    "pallet-elections-phragmen/try-runtime",
    "pallet-grandpa/try-runtime",
    "pallet-im-online/try-runtime",
    "pallet-indices/try-runtime",
    "pallet-lottery/try-runtime",
    "pallet-membership/try-runtime",
    "pallet-mmr/try-runtime",
    "pallet-multisig/try-runtime",
    "pallet-identity/try-runtime",
    "pallet-scheduler/try-runtime",
    "pallet-offences/try-runtime",
    "pallet-proxy/try-runtime",
    "pallet-randomness-collective-flip/try-runtime",
    "pallet-session/try-runtime",
    "pallet-staking/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-election-provider-multi-phase/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-tips/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-treasury/try-runtime",
    "pallet-utility/try-runtime",
    "pallet-society/try-runtime",
    "pallet-recovery/try-runtime",
    "pallet-uniques/try-runtime",
    "pallet-vesting/try-runtime",
    "pallet-gilt/try-runtime",
]
# Make contract callable functions marked as __unstable__ available. Do not enable
# on live chains as those are subject to change.
contracts-unstable-interface = ["pallet-contracts/unstable-interface"]
