[package]
name        = 'kico-runtime'
authors     = ["DICO-TEAM"]
description = 'A decentralized and governable ICO platform.'
license     = 'Apache 2.0'
version     = '1.1.2'
homepage    = 'https://github.com/DICO-TEAM/dico-chain'
repository  = 'https://github.com/DICO-TEAM/dico-chain'
edition     = '2018'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }

[dependencies]
codec              = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info         = { version = "1.0", default-features = false, features = ["derive"] }
static_assertions  = { version = "1.1.0" }
log                = { version = "0.4.14", default-features = false }
serde              = { version = "1.0.124", optional = true }
hex-literal        = { version = "0.3.1" }



dico-primitives = { package = 'dico-primitives', default-features = false, path = "../../primitives" }


# Local Dependencies
pallet-kyc                  = { package = 'pallet-kyc', default-features = false , path = '../../pallets/kyc'}
pallet-template             = { package = 'pallet-template', default-features = false , path = '../../pallets/template'}
pallet-oracle               = { package = 'pallet-oracle', default-features = false, path = '../../pallets/oracle'}
pallet-pricedao             = { package = 'pallet-pricedao', default-features = false, path = '../../pallets/pricedao'}
pallet-amm                  = { package = 'pallet-amm', default-features = false, path = '../../pallets/amm'}
pallet-farm                 = { package = 'pallet-farm', default-features = false, path = '../../pallets/farm'}
pallet-lbp                  = { package = 'pallet-lbp', default-features = false, path = '../../pallets/lbp'}
pallet-currencies           = { package = "pallet-currencies", default-features = false, path = "../../pallets/currencies"}
pallet-ico                  = { package = "pallet-ico", default-features = false, path = "../../pallets/ico"}
pallet-dao                  = { package = "pallet-dao", default-features = false, path = "../../pallets/dao"}
pallet-dico-treasury        = { package = "pallet-dico-treasury", default-features = false, path = "../../pallets/treasury"}
pallet-ico-rpc-runtime-api  = { package = "pallet-ico-rpc-runtime-api", default-features = false, path = "../../pallets/ico/rpc/runtime-api"}
pallet-farm-rpc-runtime-api = { package = 'pallet-farm-rpc-runtime-api', default-features = false, path = "../../pallets/farm/rpc/runtime-api" }
pallet-nft                  = { package = "pallet-nft", default-features = false, path = "../../pallets/nft"}
pallet-farm-extend          = { package = 'pallet-farm-extend', default-features = false, path = '../../pallets/farm-extend'}
# orml
orml-tokens   = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }
orml-traits   = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }
orml-vesting  = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-api              = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-block-builder    = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-core             = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-consensus-aura   = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-inherents        = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-io               = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-offchain         = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-runtime          = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-staking          = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-session          = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-std              = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-version          = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }

## Substrate FRAME Dependencies
frame-executive                  = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
frame-benchmarking               = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false, optional = true }
frame-support                    = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.13", default-features = false }
frame-system                     = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
frame-system-benchmarking        = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false, optional = true }
frame-system-rpc-runtime-api     = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
frame-election-provider-support  = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }

## Substrate Pallet Dependencies
pallet-aura                                 = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
pallet-balances                             = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
pallet-randomness-collective-flip           = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
pallet-sudo                                 = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
pallet-timestamp                            = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
pallet-utility                              = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
pallet-multisig                             = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
pallet-proxy                                = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
pallet-transaction-payment                  = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
pallet-transaction-payment-rpc-runtime-api  = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
pallet-democracy                            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-membership                           = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-staking                              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-session                              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-staking-reward-curve                 = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-scheduler                            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-collective                           = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-treasury                             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-authorship                           = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-bounties                             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-elections-phragmen                   = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-npos-elections                           = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }


# Cumulus Dependencies
cumulus-pallet-aura-ext         = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.13', default-features = false }
cumulus-pallet-parachain-system = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.13', default-features = false }
cumulus-pallet-dmp-queue        = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.13', default-features = false }
cumulus-pallet-xcm              = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.13', default-features = false }
cumulus-pallet-xcmp-queue       = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.13', default-features = false }
cumulus-primitives-core         = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.13', default-features = false }
cumulus-primitives-timestamp    = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.13', default-features = false }
cumulus-primitives-utility      = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.13', default-features = false }
pallet-collator-selection       = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.13', default-features = false }
parachain-info                  = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.13', default-features = false }

# Polkadot Dependencies
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.13', default-features = false }
xcm                = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.13', default-features = false }
xcm-builder        = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.13', default-features = false }
xcm-executor       = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.13', default-features = false }
pallet-xcm         = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.13', default-features = false }

[features]
default = ['std']
runtime-benchmarks = [
	'sp-runtime/runtime-benchmarks',
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',

	# local pallet
	'pallet-template/runtime-benchmarks',
	'pallet-kyc/runtime-benchmarks',

	'pallet-democracy/runtime-benchmarks',
	'pallet-membership/runtime-benchmarks',
	'pallet-staking/runtime-benchmarks',
	'pallet-treasury/runtime-benchmarks',
	'pallet-bounties/runtime-benchmarks',
	'pallet-scheduler/runtime-benchmarks',
	'pallet-collective/runtime-benchmarks',
	'pallet-elections-phragmen/runtime-benchmarks',
]
std = [
	"codec/std",
	"serde",
	"log/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"parachain-info/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-pallet-xcm/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"pallet-aura/std",
	"sp-consensus-aura/std",
	#	local pallet
	'pallet-template/std',
	'pallet-kyc/std',
	"pallet-oracle/std",
	"pallet-pricedao/std",

	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	'pallet-multisig/std',
	'pallet-utility/std',
	'pallet-proxy/std',
	"pallet-transaction-payment/std",
	'pallet-democracy/std',
	'pallet-membership/std',
	'pallet-staking/std',
	'pallet-treasury/std',
	'pallet-bounties/std',
	'pallet-scheduler/std',
	'pallet-collective/std',
	'pallet-elections-phragmen/std',
	'pallet-session/std',
	'pallet-authorship/std',
	'pallet-collator-selection/std',
	'sp-npos-elections/std',
	"pallet-amm/std",
	"pallet-farm/std",
	"pallet-lbp/std",
	"pallet-currencies/std",
	"pallet-ico/std",
	"pallet-dao/std",
	"pallet-dico-treasury/std",
	"pallet-ico-rpc-runtime-api/std",
	"pallet-farm-rpc-runtime-api/std",
	"pallet-nft/std",
	"pallet-farm-extend/std",

	"orml-tokens/std",
	"orml-traits/std",
	"orml-vesting/std",
]
